Fixes footer login link wrap styles.

--- a/reason_4.0/www/local/luther_2014/stylesheets/base.css
+++ b/reason_4.0/www/local/luther_2014/stylesheets/base.css
@@ -2371,69 +2371,74 @@ body #wrapper #post-footer a {
 #minisite #footer .loginLinkModule div {
   display: inline;
 }
-/* line 536, scss/_minisite.scss */
+/* line 537, scss/_minisite.scss */
 #minisite #footer .loginLinkModule div a {
   background: #e9e9e9;
-  padding: 0.125rem 0.375rem;
+  padding: 0.3125rem 0.375rem;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   -o-border-radius: 4px;
   border-radius: 4px;
   margin-right: 0.25rem;
+  display: inline-block;
+  margin-bottom: 0.25rem;
+  line-height: 1;
 }
 @media only screen and (min-width: 60.0625em) {
-  /* line 536, scss/_minisite.scss */
+  /* line 537, scss/_minisite.scss */
   #minisite #footer .loginLinkModule div a {
     margin-left: 0.25rem;
   }
 }
-/* line 548, scss/_minisite.scss */
+/* line 552, scss/_minisite.scss */
 #minisite #footer .loginLinkModule #footerLoginLink {
-  display: inline;
+  display: inline-block;
   font-size: 0.75rem;
   margin: 0.5rem 0 0;
   background: #e9e9e9;
-  padding: 0.125rem 0.375rem;
+  padding: 0.3125rem 0.375rem;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   -o-border-radius: 4px;
   border-radius: 4px;
   margin: 0 0.25rem 0 0;
+  white-space: nowrap;
+  line-height: 1;
 }
 @media only screen and (min-width: 60.0625em) {
-  /* line 548, scss/_minisite.scss */
+  /* line 552, scss/_minisite.scss */
   #minisite #footer .loginLinkModule #footerLoginLink {
     margin: 0 0 0 0.25rem;
   }
 }
-/* line 561, scss/_minisite.scss */
+/* line 568, scss/_minisite.scss */
 #minisite #footer .loginLinkModule #footerLoginLink .username {
   font-weight: 400;
 }
-/* line 566, scss/_minisite.scss */
+/* line 573, scss/_minisite.scss */
 #minisite #footer .loginLinkModule.unauthenticated #footerLoginLink {
   margin: 0;
 }
 @media only screen and (min-width: 40.063em) {
-  /* line 575, scss/_minisite.scss */
+  /* line 582, scss/_minisite.scss */
   #minisite .feedLink {
     display: inline;
     text-align: right;
   }
 }
-/* line 583, scss/_minisite.scss */
+/* line 590, scss/_minisite.scss */
 #minisite .feedLink .feedInfo a {
   color: transparent;
 }
-/* line 587, scss/_minisite.scss */
+/* line 594, scss/_minisite.scss */
 #minisite .feedLink .feedInfo a:before {
   content: "\f09e";
   display: block;
   color: #9f2112;
 }
-/* line 596, scss/_minisite.scss */
+/* line 603, scss/_minisite.scss */
 #minisite .pagination {
   margin-bottom: 2.5rem;
   *zoom: 1;
@@ -2448,17 +2453,17 @@ body #wrapper #post-footer a {
   clear: both;
 }
 @media only screen and (min-width: 40.063em) {
-  /* line 596, scss/_minisite.scss */
+  /* line 603, scss/_minisite.scss */
   #minisite .pagination {
     width: 50%;
     float: left;
   }
 }
-/* line 605, scss/_minisite.scss */
+/* line 612, scss/_minisite.scss */
 #minisite .pagination.above {
   dispaly: none;
 }
-/* line 616, scss/_minisite.scss */
+/* line 623, scss/_minisite.scss */
 #minisite .pagination .pages a,
 #minisite .pagination .pages strong {
   margin: 0 0.25rem;
